week 3 completed, made more tests than required